[package]
name = "aimer"
version = "0.0.1-pre-alpha-2"
edition = "2024"
description = "This is a placeholder for the Aimer project. Maybe a gui framework ?"
license = "MIT"
repository = "https://github.com/Cottons29/aimer-place.git"
readme = "README.md"
keywords = ["gui", "rust"]
categories = ["development-tools", "gui"]

[dependencies]
